--- a/package.json
+++ b/package.json
@@ -24,14 +24,21 @@
     "@types/dotenv": "^8.2.0",
     "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
+    "@types/module-alias": "^2.0.1",
     "@types/prettier": "^2.6.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jest": "^28.1.0",
+    "module-alias": "^2.2.2",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
