--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:functional": "jest --projects ./test --runInBand",
+    "test:e2e": "jest --projects ./test --runInBand",
     "test:unit": "jest",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
@@ -32,6 +32,7 @@
     "express": "^4.18.1",
     "jest": "^28.1.0",
     "module-alias": "^2.2.2",
+    "nock": "^13.2.4",
     "prettier": "^2.6.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.2",
@@ -43,6 +44,7 @@
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "typescript": "^4.6.4"
   }
 }
