--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@overnightjs/core": "^1.7.6",
     "@types/config": "0.0.41",
     "@types/dotenv": "^8.2.0",
     "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^27.5.1",
     "@types/module-alias": "^2.0.1",
     "@types/prettier": "^2.6.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "faker": "^6.6.6",
     "jest": "^28.1.0",
     "module-alias": "^2.2.2",
     "nock": "^13.2.4",
