rel: release repository

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
   "include": [
     "./src/**/*.ts",
     "./test/**/*.ts"
-  ],
+, "config/connection-typeorm.ts"  ],
   "exclude": [
     "./node_modules/*",
     "./dist"
