--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:e2e": "jest --projects ./test --runInBand",
     "test:unit": "jest",
+    "test:cov": "jest --coverage",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
