--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:e2e": "jest --projects ./test --runInBand",
-    "test:unit": "jest",
-    "test:cov": "jest --coverage",
+    "test": "jest NODE_ENV=test",
+    "test:e2e": "jest --projects ./test --runInBand NODE_ENV=test",
+    "test:unit": "jest NODE_ENV=test",
+    "test:cov": "jest --coverage NODE_ENV=test",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@faker-js/faker": "^6.3.1",
     "@overnightjs/core": "^1.7.6",
+    "@shelf/jest-mongodb": "^2.2.2",
     "@types/config": "^0.0.41",
     "@types/dotenv": "^8.2.0",
     "@types/eslint": "^8.4.2",
@@ -43,6 +44,7 @@
     "mongodb-memory-server": "^8.5.2",
     "mongoose": "^6.3.4",
     "nock": "^13.2.4",
+    "npmlog": "^6.0.2",
     "pino": "^7.11.0",
     "prettier": "^2.6.2",
     "supertest": "^6.2.3",
@@ -51,6 +53,7 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/npmlog": "^4.1.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
