fix: configure testes and positions fields

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
-    "test": "jest NODE_ENV=test",
-    "test:e2e": "jest --projects ./test --runInBand NODE_ENV=test",
-    "test:unit": "jest NODE_ENV=test",
-    "test:cov": "jest --coverage NODE_ENV=test",
+    "test": "jest",
+    "test:e2e": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
+    "test:cov": "jest --coverage",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
