--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Run npm start",
             "request": "launch",
             "type": "node-terminal"
+        },
+
+        {
+            "command": "npm test",
+            "name": "Run npm test",
+            "request": "launch",
+            "type": "node-terminal"
         }
     ]
 }
