--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
-    "test": "NODE_ENV=test jest",
+    "test": "jest --passWithNoTests --no-cache --runInBand --forceExit --verbose ./test",
     "test:e2e": "jest --projects ./test --runInBand",
     "test:unit": "jest",
     "test:cov": "jest --coverage",
@@ -28,7 +28,6 @@
     "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
     "@types/faker": "^6.6.9",
-    "@types/jest": "^27.5.1",
     "@types/module-alias": "^2.0.1",
     "@types/mongodb": "^4.0.7",
     "@types/pino": "^7.0.5",
@@ -39,21 +38,19 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "faker": "^6.6.6",
-    "jest": "^28.1.0",
     "jest-mock-extended": "^2.0.6",
     "module-alias": "^2.2.2",
     "mongodb": "^4.6.0",
-    "mongodb-memory-server": "^8.5.2",
     "mongoose": "^6.3.4",
     "nock": "^13.2.4",
     "npmlog": "^6.0.2",
     "pino": "^7.11.0",
     "prettier": "^2.6.2",
-    "ts-jest": "^28.0.3",
     "ts-node-dev": "^1.1.8",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/npmlog": "^4.1.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
@@ -61,7 +58,10 @@
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.0",
+    "mongodb-memory-server": "^8.6.0",
     "supertest": "^6.2.3",
+    "ts-jest": "^28.0.3",
     "typescript": "^4.6.4"
   }
 }
