--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "config": "^3.3.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-openapi-validator": "^3.17.2",
     "faker": "^6.6.6",
     "jest-mock-extended": "^2.0.6",
     "module-alias": "^2.2.2",
@@ -46,13 +47,16 @@
     "npmlog": "^6.0.2",
     "pino": "^7.11.0",
     "prettier": "^2.6.2",
+    "swagger-ui-express": "^4.4.0",
     "ts-node-dev": "^1.1.8",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
+    "@types/multer": "^1.4.3",
     "@types/npmlog": "^4.1.4",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
